Fix wrapping mobile menu test "Resume"

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
-  word-break: break-word;
+  word-break: normal;
 }
 
 body {
